[IndexedDB] Fixed metric size ranges

R: mpearson@chromium.org
Bug: 730199
Change-Id: I40e4c84432536931daa6416ee027db739dad9968